# dkulpaclibs

./: .gitignore  Finddkulpaclibs.cmake  install.sh
catDot/: CMakeLists.txt  Dot.h  Element.h  Vector.h  main.cpp
dkulpadev/: CMakeLists.txt  DHT22.cpp  DHT22.h  HD44780.cpp  HD44780.h
dkulpahw/: CMakeLists.txt  Camera.cpp  Camera.h  SoundRecorder.cpp  SoundRecorder.h
dkulpahw/bluetooth/: BluetoothManager.cpp  BluetoothManager.h  BtRFCOMMServer.cpp  BtRFCOMMServer.h
dkulpamisc/: CMakeLists.txt  Clock.cpp  Clock.h  ConfigManager.cpp  ConfigManager.h  JSON.cpp  JSON.h  PostPairs.cpp  PostPairs.h  Thread.cpp  Thread.h
dkulpamisc/debug/: Log.cpp  Log.h
dkulpaprot/: CMakeLists.txt  I2C.h  SPI.h  defs.h
